# OpenSandbox

./: CLAUDE.md  README_zh.md  fleet-test.yaml  fleet.yaml.example
examples/: README.md
examples/agent-sandbox/: main.py
examples/aio-sandbox/: main.py
examples/chrome/: main.py
examples/code-interpreter/: main.py
examples/desktop/: main.py
examples/docker-pvc-volume-mount/: main.py
examples/host-volume-mount/: main.py
examples/jcdo/: README.md  main.py
examples/langgraph/: main.py
examples/nullclaw/: main.py
examples/openclaw/: main.py
examples/rl-training/: main.py
examples/vscode/: main.py
kubernetes/: Makefile
notes/: 001-项目价值与痛点分析.md  002-新手使用指南（macOS-Docker）.md  003-jcdo沙箱使用指南.md  004-最近一次git-pull更新内容分析.md  005-jcdo在OpenSandbox中运行可行性分析.md  006-JcSandbox项目发展方向与路线规划.md
orchestrator/: __init__.py  cli.py  config.py  health.py  jcdo_config.py  models.py  pyproject.toml  reconciler.py
server/: example.config.k8s.toml  example.config.k8s.zh.toml  example.config.toml  example.config.zh.toml
server/src/: cli.py  config.py  main.py
server/src/services/: docker.py
